--- a/python/05_prophet.ipynb
+++ b/python/05_prophet.ipynb
@@ -1374,8 +1374,7 @@
         "plt.plot(forecast['ds'], forecast['yhat'])\n",
         "plt.plot(df.tail(60)['ds'], df.tail(60)['y'])\n",
         "plt.plot(forecast['ds'], forecast['yhat_upper'])\n",
-        "plt.plot(forecast['ds'], forecast['yhat_lower'])\n",
-        "\n"
+        "plt.plot(forecast['ds'], forecast['yhat_lower'])"
       ],
       "outputs": [
         {
